relm4-macros/tests/ui/compile-fail/component-empty.rs
struct TestComponent;

#[relm4_macros::component]
impl Component for TestComponent {

}

fn main() {}
